Java 11 changes related to Double() constructor